Some styling... footer a bit nicer.

--- a/BugTrack_UI/Shared/MainLayout.razor
+++ b/BugTrack_UI/Shared/MainLayout.razor
@@ -3,6 +3,16 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+<style>
+        footer {
+            position: relative;
+            margin-top: -50px; /* negative value of footer height */
+            height: 50px;
+            clear: both;
+            background-color:white;
+            color:black;
+        }
+    </style>
 </head>
 <PageTitle>BugTrack</PageTitle>
 
@@ -12,15 +22,25 @@
     </div>
 
     <main>
-        <div class="top-row px-4 auth">
+        <div class="">
             <LoginDisplay />           
         </div>
 
-        <article class="content px-4">
+        <article class="content px-4" style="padding-bottom:70px;  min-height:100%;">
             @Body
         </article>
+        <footer class=" text-center text-lg-start">
+     <!-- Copyright -->
+            <div class="text-center">
+            © 2022 Copyright:
+               <a class="text-dark" href="https://mvc.tech">MVC.tech</a>
+            </div>
+            <!-- Copyright -->
+        </footer>
+       
     </main>
-</div>
+    
+</div> 
 
 @code {
 
