--- a/BugTrack_UI/Shared/LoginDisplay.razor
+++ b/BugTrack_UI/Shared/LoginDisplay.razor
@@ -1,8 +1,7 @@
 ﻿<AuthorizeView>
     <Authorized>
-        <a href="Identity/Account/Manage">Hello, @context.User.Identity?.Name!</a>
-        <form method="post" action="Identity/Account/Logout">
-            <button type="submit" class="nav-link btn btn-link">Log out</button>
+          <form class="float-end" method="post" action="Identity/Account/Logout">
+            <button type="submit" class="nav-link btn btn-link">Log out @context.User.Identity?.Name</button>
         </form>
     </Authorized>
     <NotAuthorized>
