--- a/BugTrack_UI/Pages/AllBugs.razor
+++ b/BugTrack_UI/Pages/AllBugs.razor
@@ -10,6 +10,7 @@
 @inject IDispatcher _Dispatcher
 @inject IJSRuntime ijsr;
 @inject AuthenticationStateProvider GetAuthenticationStateAsync
+
 <AuthorizeView>
     <Authorized>
         <h3> <span class="oi oi-bug" aria-hidden="true"></span>Bug Manager</h3>
@@ -96,16 +97,19 @@
 
     protected void CheckboxChanged(ChangeEventArgs e)
     {
-        var x = bool.Parse(e.Value.ToString());
+        var x = bool.Parse(e!.Value!.ToString()!);
         _Dispatcher.Dispatch(new AssignedToMeCheckChangedEffect.EffectCheckChanged(x));
         _Dispatcher.Dispatch(new LoadBugEffect.EffectBugAction(BugState.Value.AssignedToMe,BugState.Value.IncludeClosed));
     }
 
     protected void CheckboxIncludeClosedChanged(ChangeEventArgs e)
     {
-        var x = bool.Parse(e.Value.ToString());
-        _Dispatcher.Dispatch(new IncludeCancelledCheckChangedEffect.EffectCheckChanged(x));
-        _Dispatcher.Dispatch(new LoadBugEffect.EffectBugAction(BugState.Value.AssignedToMe, BugState.Value.IncludeClosed));
+        if (e is not null && e.Value is not null)
+        {
+            var x = bool.Parse(e.Value.ToString()!);
+            _Dispatcher.Dispatch(new IncludeCancelledCheckChangedEffect.EffectCheckChanged(x));
+            _Dispatcher.Dispatch(new LoadBugEffect.EffectBugAction(BugState!.Value!.AssignedToMe!, BugState!.Value!.IncludeClosed!));
+        }
     }
 
     protected void CreateBug()
@@ -115,8 +119,8 @@
 
     protected void GetSearch(ChangeEventArgs ce)
     {
-        if (ce.Value != null && ce.Value.ToString().Length >= 1){
-            _Dispatcher.Dispatch(new SearchBugEffect.EffectSearchBug(ce.Value.ToString(),BugState.Value.AssignedToMe,BugState.Value.IncludeClosed));
+        if (ce.Value != null && ce.Value.ToString()!.Length! >= 1){
+            _Dispatcher.Dispatch(new SearchBugEffect.EffectSearchBug(ce!.Value!.ToString()!,BugState.Value.AssignedToMe,BugState.Value.IncludeClosed));
         }
         else
         {
