--- a/BugTrack_UI/Pages/AllBugs.razor
+++ b/BugTrack_UI/Pages/AllBugs.razor
@@ -62,6 +62,7 @@
             else if (BugState.Value.IsLoading)
             {
                 <div class="h4"> Loading...</div>
+                <img src="/IMG/loading.gif">
             }
             else if ((BugState.Value.CurrentBugs is not null) && BugState.Value.CurrentBugs.Any())
             {
