--- a/BugTrack_UI/Pages/AllBugs.razor
+++ b/BugTrack_UI/Pages/AllBugs.razor
@@ -42,7 +42,7 @@
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="@BugState.Value.IncludeClosed" checked="@BugState.Value.IncludeClosed" @oninput="CheckboxIncludeClosedChanged" id="includeClosed">
                     <label class="form-check-label" for="includeClosed">
-                        Include Closed
+                        Include closed
                     </label>
                 </div>
             </div>           
