--- a/BugTrack_UI/Components/BugCardEdit.razor
+++ b/BugTrack_UI/Components/BugCardEdit.razor
@@ -28,7 +28,7 @@
          </div>
         </div>
         <div class="card-footer text-center"> 
-            <small style="font-size:small;">This bug was created by: @TheBug.CreatedBy on @TheBug.CreatedDate!.Value.ToShortDateString() and was last updated  at @string.Format("{0} {1}", TheBug.UpdatedDate!.Value.ToShortTimeString(), TheBug.UpdatedDate!.Value.Hour > 12 ? "PM" : "AM") </small>           
+            <small style="font-size:small;">This bug was created by: @TheBug.CreatedBy on @TheBug.CreatedDate!.Value.ToShortDateString()  at @string.Format("{0} {1}", TheBug.UpdatedDate!.Value.ToShortTimeString(), TheBug.UpdatedDate!.Value.Hour > 12 ? "PM" : "AM") </small>           
         </div>
     </div>
 </div>
