tweaks to ui and actions.

--- a/BugTrack_UI/Pages/Shared/_Layout.cshtml
+++ b/BugTrack_UI/Pages/Shared/_Layout.cshtml
@@ -21,8 +21,9 @@
         <link rel="stylesheet" href="~/Identity/css/site.css" asp-append-version="true" />
     </environment>
 </head>
+<body>
 @RenderBody()
-
+</body>
     <environment include="Development">
         <script src="~/Identity/lib/jquery/dist/jquery.js"></script>
         <script src="~/Identity/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
