--- a/BugTrack_UI/Shared/MainLayout.razor
+++ b/BugTrack_UI/Shared/MainLayout.razor
@@ -4,14 +4,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 <style>
-        footer {
-            position: relative;
-            margin-top: -50px; /* negative value of footer height */
-            height: 50px;
-            clear: both;
-            background-color:white;
-            color:black;
-        }
+
     </style>
 </head>
 <PageTitle>BugTrack</PageTitle>
@@ -26,7 +19,7 @@
             <LoginDisplay />           
         </div>
 
-        <article class="content px-4" style="padding-bottom:70px;  min-height:100%;">
+        <article class="content px-4 content">
             @Body
         </article>
         <footer class=" text-center text-lg-start">
