--- a/BugTrack_UI/Components/CreateModal.razor
+++ b/BugTrack_UI/Components/CreateModal.razor
@@ -71,7 +71,7 @@
                             <span class="oi oi-bug" aria-hidden="true"></span>
                             Create Bug
                         </button>
-                        <button class="btn btn-black" onclick="CloseModal">
+                        <button type="button" class="btn btn-black" @onclick="CloseModal">
                             <span class="oi oi-x" aria-hidden="true"></span>
                             Cancel
                         </button>
@@ -108,8 +108,9 @@
 
     private void CloseModal()
     {
-        Task.Delay(800);
-        // _Dispatcher.Dispatch(new CreateBugSaveEffect.EffectCreateBug(EditingBug));
+       _Dispatcher.Dispatch(new CreateBugSaveCancelEffect.EffectCreateCancelBug());
+       
+
     }
 
 
