--- a/BugTrack_UI/Components/EditModal.razor
+++ b/BugTrack_UI/Components/EditModal.razor
@@ -81,8 +81,8 @@
                 </div>
 
                 <!-- Modal footer -->
-                <div class="modal-footer">
-                    <h6 class="lead"><small>This bug was created by: @EditingBug.CreatedBy on @EditingBug.CreatedDate!.Value.ToShortDateString() at @string.Format("{0} {1}", EditingBug.UpdatedDate!.Value.ToShortTimeString(), EditingBug.UpdatedDate!.Value.Hour > 12 ? "PM" : "AM")  </small></h6>
+                <div class="modal-footer align-content-center">
+                   <small>This bug was created by: @EditingBug.CreatedBy on @EditingBug.CreatedDate!.Value.ToShortDateString()  at @string.Format("{0} {1}", EditingBug.UpdatedDate!.Value.ToShortTimeString(), EditingBug.UpdatedDate!.Value.Hour > 12 ? "PM" : "AM")  </small>
                 </div>
 
             </div>
@@ -111,7 +111,7 @@
 
     private void CloseModal()
     {
-        Task.Delay(800);
+       
         _Dispatcher.Dispatch(new EditBugSaveCancelEffect.EffectSaveCancelBug());
     }
 
